--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.76",
+    "gatsby-plugin-flow": "^1.0.2",
+    "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-styled-components": "^3.0.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.0",
+    "react-responsive": "^6.1.1",
+    "rebass": "^3.0.1",
     "styled-components": "^4.1.3"
   },
   "repository": {
