--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "change-case": "^3.1.0",
     "gatsby": "^2.0.76",
     "gatsby-plugin-flow": "^1.0.2",
     "gatsby-plugin-react-helmet": "^3.0.6",
@@ -25,7 +26,8 @@
     "react-helmet": "^5.2.0",
     "react-responsive": "^6.1.1",
     "rebass": "^3.0.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "urijs": "^1.19.1"
   },
   "repository": {
     "type": "git",
