--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "change-case": "^3.1.0",
-    "gatsby": "^2.0.76",
+    "gatsby": "^2.0.88",
     "gatsby-plugin-flow": "^1.0.2",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-twitter": "^2.0.11",
+    "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.0",
+    "prismjs": "^1.15.0",
     "ramda": "^0.26.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
