--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "gatsby": "^2.0.88",
     "gatsby-plugin-flow": "^1.0.2",
     "gatsby-plugin-react-helmet": "^3.0.8",
+    "gatsby-plugin-sharp": "^2.0.28",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-twitter": "^2.0.11",
+    "gatsby-remark-images": "^3.0.9",
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.23",
