--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-responsive": "^6.1.1",
+    "react-share": "^2.4.0",
     "rebass": "^3.0.1",
     "styled-components": "^4.1.3",
     "urijs": "^1.19.1"
@@ -45,6 +46,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "react-social-icons": "^4.1.0"
   }
 }
