--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "babel-plugin-styled-components": "^1.10.0",
     "change-case": "^3.1.0",
     "gatsby": "^2.2.9",
